# pipes-sdhug

./: README.md  pipes-sdhug.cabal
executable/: .#Main.hs  Main.hs  Main.hs~
src/: #State.hs#  .swp  PhilosopherPipe.hs  StatePipe.hs  StatePipe.hs~
