Name:                   pipes-sdhug
Version:                0.0.1
Author:                 Tristan Webb <t2webb@ucsd.edu>
Maintainer:             Tristan Webb <t2webb@ucsd.edu>
License:                OtherLicense
License-File:           LICENSE
Synopsis: Simple examples of the Pipes library
Description: Examples of dinining philosophers problem and a counter using Pipes
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      PhilosopherPipe
                      , StatePipe
  Build-Depends:        base >= 4 && < 5
                      , pipes
                      , pipes-concurrency
                      , mwc-random
                      , async
                      , stm
                      , mtl
executable pipes-sdhug
    build-depends:
        base
      , pipes-sdhug
      , mtl
      , mwc-random
      , stm
    default-language:
        Haskell2010
    ghc-prof-options:
    ghc-options:
        -Odph
    hs-source-dirs:
        executable
    main-is:
        Main.hs

Source-Repository head
  Type:                 git
--  Location:
